# UMN-COMMS-Software

./: CMakeLists.txt  Makefile  README.md
include/: comms_hardware.h  comms_stats.h
include/packet/: ppp_packet.h  radio_service.h
include/packet/driver/: ground_radio_driver.h  radio_driver.h  satellite_radio_driver.h
include/util/: file_descriptor_manager.h  signal_manager.h  uart.h
src/packet/: CMakeLists.txt  ppp_packet.cpp  radio_service.cpp
src/packet/driver/: CMakeLists.txt  ground_radio_driver.cpp  radio_driver.cpp  satellite_radio_driver.cpp
